refactor: add Authentication middleware
