# TravelSchedule/Resources/openapi.yaml
@@ -16,12 +16,6 @@ paths:
       summary: Список ближайших станций
       operationId: getNearestStations
       parameters:
-        - name: apikey
-          in: query
-          description: API key
-          required: true
-          schema:
-            type: string
         - name: lat
           in: query
           description: Широта согласно WGS84
@@ -90,12 +84,6 @@ paths:
       summary: Расписание рейсов между станциями
       operationId: getSchedualBetweenStations
       parameters:
-        - name: apikey
-          in: query
-          description: API key
-          required: true
-          schema:
-            type: string
         - name: from
           in: query
           description: Код станции отправления
@@ -170,12 +158,6 @@ paths:
       summary: Список рейсов по станции
       operationId: getStationSchedule
       parameters:
-        - name: apikey
-          in: query
-          description: API key
-          required: true
-          schema:
-            type: string
         - name: station
           in: query
           description: Код станции
@@ -244,12 +226,6 @@ paths:
       summary: Список станций следования
       operationId: getRouteStations
       parameters:
-        - name: apikey
-          in: query
-          description: API key
-          required: true
-          schema:
-            type: string
         - name: uid
           in: query
           description: Идентификатор нитки
@@ -306,12 +282,6 @@ paths:
       summary: Ближайший город
       operationId: getNearestCity
       parameters:
-        - name: apikey
-          in: query
-          description: API key
-          required: true
-          schema:
-            type: string
         - name: lat
           in: query
           description: Широта согласно WGS84
@@ -356,12 +326,6 @@ paths:
       summary: Информация о перевозчике
       operationId: getCarrierInfo
       parameters:
-        - name: apikey
-          in: query
-          description: API key
-          required: true
-          schema:
-            type: string
         - name: code
           in: query
           description: Код перевозчика
@@ -400,12 +364,6 @@ paths:
       summary: Список всех доступных станций
       operationId: getAllStations
       parameters:
-        - name: apikey
-          in: query
-          description: API key
-          required: true
-          schema:
-            type: string
         - name: lang
           in: query
           description: Язык возвращаемой информации (например, ru_RU)
@@ -432,12 +390,6 @@ paths:
       summary: Копирайт Яндекс Расписаний
       operationId: getCopyright
       parameters:
-      - name: apikey
-        in: query
-        description: API key
-        required: true
-        schema:
-          type: string
       - name: format
         in: query
         description: Формат ответа, json по умолчанию
